--- a/Lab03.ipynb
+++ b/Lab03.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDVINBjquhkPY30MSVIhEv",
+      "authorship_tag": "ABX9TyMm2CTFfhlLx3UgrmfNIa1K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,37 +76,10 @@
         "mail_model.local_independencies(['S','O','L','M'])\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ACyySocFuC17",
-        "outputId": "80a00d7a-8842-4b82-f1dd-c6a679cb8773"
+        "id": "ACyySocFuC17"
       },
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "WARNING:pgmpy:Replacing existing CPD for S\n",
-            "WARNING:pgmpy:Replacing existing CPD for O\n",
-            "WARNING:pgmpy:Replacing existing CPD for L\n",
-            "WARNING:pgmpy:Replacing existing CPD for M\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(O ⟂ M, L | S)\n",
-              "(L ⟂ O | S)\n",
-              "(M ⟂ O | L, S)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 15
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -114,41 +87,81 @@
         "from pgmpy.inference import VariableElimination\n",
         "\n",
         "infer = VariableElimination(mail_model)\n",
-        "posterior_p = infer.query([\"O\",\"L\", \"M\"])\n",
-        "print(posterior_p)"
+        "for i in range(2):\n",
+        "  for j in range(2):\n",
+        "    for k in range(2):\n",
+        "      posterior_p = infer.query([\"S\"], evidence={\"O\": i,\"L\": j, \"M\": k})\n",
+        "      print(posterior_p)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FkqWmBn-wjOG",
-        "outputId": "1ea570cc-8dfc-46ac-d447-4752e49ad610"
+        "outputId": "efa72d87-b187-4725-94fc-05ff32255de7"
       },
-      "execution_count": 14,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+------+------+------+--------------+\n",
-            "| O    | L    | M    |   phi(O,L,M) |\n",
-            "+======+======+======+==============+\n",
-            "| O(0) | L(0) | M(0) |       0.3144 |\n",
-            "+------+------+------+--------------+\n",
-            "| O(0) | L(0) | M(1) |       0.0876 |\n",
-            "+------+------+------+--------------+\n",
-            "| O(0) | L(1) | M(0) |       0.0744 |\n",
-            "+------+------+------+--------------+\n",
-            "| O(0) | L(1) | M(1) |       0.1836 |\n",
-            "+------+------+------+--------------+\n",
-            "| O(1) | L(0) | M(0) |       0.0616 |\n",
-            "+------+------+------+--------------+\n",
-            "| O(1) | L(0) | M(1) |       0.0364 |\n",
-            "+------+------+------+--------------+\n",
-            "| O(1) | L(1) | M(0) |       0.0296 |\n",
-            "+------+------+------+--------------+\n",
-            "| O(1) | L(1) | M(1) |       0.2124 |\n",
-            "+------+------+------+--------------+\n"
+            "+------+----------+\n",
+            "| S    |   phi(S) |\n",
+            "+======+==========+\n",
+            "| S(0) |   0.9618 |\n",
+            "+------+----------+\n",
+            "| S(1) |   0.0382 |\n",
+            "+------+----------+\n",
+            "+------+----------+\n",
+            "| S    |   phi(S) |\n",
+            "+======+==========+\n",
+            "| S(0) |   0.8630 |\n",
+            "+------+----------+\n",
+            "| S(1) |   0.1370 |\n",
+            "+------+----------+\n",
+            "+------+----------+\n",
+            "| S    |   phi(S) |\n",
+            "+======+==========+\n",
+            "| S(0) |   0.8710 |\n",
+            "+------+----------+\n",
+            "| S(1) |   0.1290 |\n",
+            "+------+----------+\n",
+            "+------+----------+\n",
+            "| S    |   phi(S) |\n",
+            "+======+==========+\n",
+            "| S(0) |   0.5294 |\n",
+            "+------+----------+\n",
+            "| S(1) |   0.4706 |\n",
+            "+------+----------+\n",
+            "+------+----------+\n",
+            "| S    |   phi(S) |\n",
+            "+======+==========+\n",
+            "| S(0) |   0.5455 |\n",
+            "+------+----------+\n",
+            "| S(1) |   0.4545 |\n",
+            "+------+----------+\n",
+            "+------+----------+\n",
+            "| S    |   phi(S) |\n",
+            "+======+==========+\n",
+            "| S(0) |   0.2308 |\n",
+            "+------+----------+\n",
+            "| S(1) |   0.7692 |\n",
+            "+------+----------+\n",
+            "+------+----------+\n",
+            "| S    |   phi(S) |\n",
+            "+======+==========+\n",
+            "| S(0) |   0.2432 |\n",
+            "+------+----------+\n",
+            "| S(1) |   0.7568 |\n",
+            "+------+----------+\n",
+            "+------+----------+\n",
+            "| S    |   phi(S) |\n",
+            "+======+==========+\n",
+            "| S(0) |   0.0508 |\n",
+            "+------+----------+\n",
+            "| S(1) |   0.9492 |\n",
+            "+------+----------+\n"
           ]
         }
       ]
