--- a/Lab04.ipynb
+++ b/Lab04.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO3hchi9vDrn4Eyz7HRdZXZ",
+      "authorship_tag": "ABX9TyME0Z2PsI3Ga9UY/xBfPpVX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,24 +83,90 @@
         "\n",
         "bp_infer = BeliefPropagation(model)\n",
         "marginals = bp_infer.map_query(variables=['A1', 'A2', 'A3', 'A4', 'A5'])\n",
-        "\n",
+        "marginals = bp_infer.query(variables=['A1', 'A2', 'A3', 'A4', 'A5'])\n",
         "print(marginals)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 534
+          "height": 1000
         },
         "id": "M01eJhmhuyAm",
-        "outputId": "eb115223-852d-45be-e75d-2cddf5d7a851"
+        "outputId": "5fae67e9-53a5-4b4f-9bfe-3ca5bd8baa69"
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'A1': 1, 'A2': 1, 'A3': 1, 'A4': 1, 'A5': 1}\n"
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1    | A2    | A3    | A4    | A5    |   phi(A1,A2,A3,A4,A5) |\n",
+            "+=======+=======+=======+=======+=======+=======================+\n",
+            "| A1(0) | A2(0) | A3(0) | A4(0) | A5(0) |                0.0000 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(0) | A2(0) | A3(0) | A4(0) | A5(1) |                0.0000 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(0) | A2(0) | A3(0) | A4(1) | A5(0) |                0.0000 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(0) | A2(0) | A3(0) | A4(1) | A5(1) |                0.0000 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(0) | A2(0) | A3(1) | A4(0) | A5(0) |                0.0000 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(0) | A2(0) | A3(1) | A4(0) | A5(1) |                0.0000 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(0) | A2(0) | A3(1) | A4(1) | A5(0) |                0.0000 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(0) | A2(0) | A3(1) | A4(1) | A5(1) |                0.0001 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(0) | A2(1) | A3(0) | A4(0) | A5(0) |                0.0000 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(0) | A2(1) | A3(0) | A4(0) | A5(1) |                0.0000 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(0) | A2(1) | A3(0) | A4(1) | A5(0) |                0.0000 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(0) | A2(1) | A3(0) | A4(1) | A5(1) |                0.0003 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(0) | A2(1) | A3(1) | A4(0) | A5(0) |                0.0000 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(0) | A2(1) | A3(1) | A4(0) | A5(1) |                0.0003 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(0) | A2(1) | A3(1) | A4(1) | A5(0) |                0.0021 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(0) | A2(1) | A3(1) | A4(1) | A5(1) |                0.1164 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(1) | A2(0) | A3(0) | A4(0) | A5(0) |                0.0000 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(1) | A2(0) | A3(0) | A4(0) | A5(1) |                0.0000 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(1) | A2(0) | A3(0) | A4(1) | A5(0) |                0.0000 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(1) | A2(0) | A3(0) | A4(1) | A5(1) |                0.0000 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(1) | A2(0) | A3(1) | A4(0) | A5(0) |                0.0000 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(1) | A2(0) | A3(1) | A4(0) | A5(1) |                0.0000 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(1) | A2(0) | A3(1) | A4(1) | A5(0) |                0.0000 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(1) | A2(0) | A3(1) | A4(1) | A5(1) |                0.0008 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(1) | A2(1) | A3(0) | A4(0) | A5(0) |                0.0000 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(1) | A2(1) | A3(0) | A4(0) | A5(1) |                0.0000 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(1) | A2(1) | A3(0) | A4(1) | A5(0) |                0.0000 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(1) | A2(1) | A3(0) | A4(1) | A5(1) |                0.0021 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(1) | A2(1) | A3(1) | A4(0) | A5(0) |                0.0000 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(1) | A2(1) | A3(1) | A4(0) | A5(1) |                0.0021 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(1) | A2(1) | A3(1) | A4(1) | A5(0) |                0.0157 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n",
+            "| A1(1) | A2(1) | A3(1) | A4(1) | A5(1) |                0.8599 |\n",
+            "+-------+-------+-------+-------+-------+-----------------------+\n"
           ]
         },
         {
